src/ui/stylesheets/global.styl
// Single-direction margin
*
	margin-bottom 0
*:first-child
	margin-top 0

// General
html
	font 15px/20px inter
	font-feature-settings 'case', 'cv04', 'cv05', 'cv07', 'cv11', 'ss03', 'tnum'
*:focus
	outline-color gold

// Body
body
	align-items center
	display flex
	flex-flow column nowrap
	margin 0

// Paragraphs
p
	margin-top 0.5em
hr
	background currentColor
	border 0
	height 1px
	margin 1em 0

// Formatted text
a
	color inherit
address
	font-style normal

// Verbatim text
blockquote
	border-left 2px solid gainsboro
	margin 0
	margin-top 0.5em
	opacity 0.75
	padding-inline-start 1ch
code
	font inherit
pre
	display inline-block
	font 12px 'roboto mono'
	margin-top 0.66em
	white-space pre-wrap

// Spoilers
.md-spoiler-text
	background rgba(0,0,0,1)
	cursor text
	padding 0.05em 0
	opacity 0.5
	& a
		opacity 0
	&:hover
		background rgba(0,0,0,0.1)
		opacity 1
		& a
			opacity 1

// Lists
menu
	margin 0
	padding 0
ol
	list-style decimal
	margin-top 0.5em
	padding-inline-start 3ch
ul
	list-style disc
	margin-top 0.5em
	padding-inline-start 3ch

// Headers
h1
h2
h3
h4
h5
h6
	font-size 1.16em
	font-weight bold
	margin-top 1em
h1
	font-size 1.33em

// Tables
table
	border-collapse collapse
	font-size 12px
	line-height 15px
	margin-top 0.5em
	white-space pre-wrap
td
th
	padding 0
	padding-right 2ch

// Media
figure
	margin 0
iframe
	background black
	border 0
	border-radius 6px
img
	border-radius 6px
	display block
video
	background black
	border-radius 6px
	display block

// Interactive
button
	color inherit
	border 0
	cursor pointer
	font inherit
	letter-spacing inherit
	line-height inherit
	padding 0
	word-spacing inherit
input
	border 0
	color inherit
	font inherit
	letter-spacing inherit
	line-height inherit
	margin 0
	padding 0
	word-spacing inherit

// Fonts
@font-face
	font-family 'inter'
	font-style normal italic
	font-weight 100 900
	src url('../assets/fonts/font_inter_var.woff2') format('woff2')

